# mock_project

./: README.md  example.env  langgraph.json  pyproject.toml  pytest.ini  requirements.txt
internal_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/internal_chatbot/: __init__.py  internal_chatbot.py  internal_chatbot_config.py  internal_chatbot_nodes.py  internal_chatbot_prompts.py  internal_chatbot_retriever.py  internal_chatbot_state.py
tests/: README.md  __init__.py  conftest.py  test_chatbot_graph.py  test_chatbot_nodes.py  test_langsmith_dataset_evaluation.py  test_langsmith_evaluation.py
